--- a/app/src/main/res/layout/announcements_card.xml
+++ b/app/src/main/res/layout/announcements_card.xml
@@ -4,8 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="5dp"
+    app:cardUseCompatPadding="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
