Added tons of new stuff.

--- a/app/src/main/res/layout/announcements_card.xml
+++ b/app/src/main/res/layout/announcements_card.xml
@@ -23,7 +23,6 @@
             android:text="Title"
             android:textSize="30dp"
             android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.023"
@@ -38,7 +37,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/toolbar_gradient"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
