--- a/app/src/main/res/layout/activity_people.xml
+++ b/app/src/main/res/layout/activity_people.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/home_drawer_layout"
+    android:id="@+id/people_drawer_layout"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
     android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <include layout="@layout/content_home" />
+        <include layout="@layout/content_people" />
 
     </android.support.design.widget.CoordinatorLayout>
 
