--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_aboutus"
             android:icon="@drawable/ic_aboutus"
-            android:title="About Us" />
+            android:title="Home" />
         <item
             android:id="@+id/nav_events"
             android:icon="@drawable/ic_events"
@@ -14,17 +14,10 @@
             android:id="@+id/nav_speakers"
             android:icon="@drawable/ic_speakers"
             android:title="Speakers" />
-
         <item
-            android:id="@+id/nav_esummit"
-            android:icon="@drawable/ic_esummit"
-            android:title="E-Summit" />
-
-        <item
-            android:id="@+id/nav_eupdates"
-            android:icon="@drawable/ic_eupdates"
-            android:title="E-Updates"/>
-
+            android:id="@+id/nav_sponsors"
+            android:icon="@drawable/ic_sponsors"
+            android:title="Sponsors" />
         <item
             android:id="@+id/nav_faq"
             android:icon="@drawable/ic_faq"
@@ -34,6 +27,11 @@
             android:id="@+id/nav_teams"
             android:icon="@drawable/ic_teams"
             android:title="Teams" />
+
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_teams"
+            android:title="Log Out" />
 
         <item android:title="Social" >
             <menu>
