--- a/app/src/main/res/layout/agenda_day1.xml
+++ b/app/src/main/res/layout/agenda_day1.xml
@@ -9,6 +9,8 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
         android:id="@+id/agenda_d1_recyclerview"/>
 
     <ProgressBar
