--- a/app/src/main/res/layout/message_received.xml
+++ b/app/src/main/res/layout/message_received.xml
@@ -17,6 +17,7 @@
         android:maxWidth="240dp"
         android:padding="8dp"
         android:text="Hello! How are you"
+        android:textSize="15dp"
         android:textColor="#ffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
