--- a/app/src/main/res/layout/user_main.xml
+++ b/app/src/main/res/layout/user_main.xml
@@ -88,7 +88,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Send Message"
-        android:background="@drawable/toolbar_gradient"
+        android:background="#FF6E00"
         android:textColor="@color/colorWhite"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
