--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimary">#1b1b1b</color>
     <color name="colorPrimaryDark">#240b36</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="buttonTint">#802F4F4F</color>
+    <color name="collapseToolbar">#4B0082</color>
 </resources>
